fix(datagrid-web): add overflow style

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -379,3 +379,7 @@ $grid-selected-row-background: $brand-light;
 .widget-datagrid-col-select input:focus-visible {
     outline-offset: 0;
 }
+
+.widget-datagrid-content {
+    overflow-y: auto;
+}
